@@ -24,21 +24,22 @@ public class InvoiceManagerApplication {
 		return new BCryptPasswordEncoder(STRENGHT);
 }
 
-@Bean
-public CorsFilter corsFilter(){
-	UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-	CorsConfiguration corsConfiguration = new CorsConfiguration();
-	corsConfiguration.setAllowCredentials(true);
-	corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000", "http://invoicemanagement.org"));
-//	corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
-	corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
-			"Accept", "Jwt-Token", "Authentication", "Origin, Accept", "X-Requested-With",
-			"Access-Control-Requested-Method", "Access-Control-Request-Headers"));
-	corsConfiguration.setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Jwt-Token", "Authorization",
-			"Access-Control-Allow-Origin", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "File-Name"));
-	corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-	urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-	return new CorsFilter(urlBasedCorsConfigurationSource);
-}
+	@Bean
+	public CorsFilter corsFilter() {
+		UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
+		CorsConfiguration corsConfiguration = new CorsConfiguration();
+		corsConfiguration.setAllowCredentials(true);
+		corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000", "http://invoicemanagement.org"));
+		//corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+		corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
+				"Accept", "Jwt-Token", "Authorization", "Origin", "Accept", "X-Requested-With",
+				"Access-Control-Request-Method", "Access-Control-Request-Headers"));
+		corsConfiguration.setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Jwt-Token", "Authorization",
+				"Access-Control-Allow-Origin", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "File-Name"));
+		corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+		urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
+		return new CorsFilter(urlBasedCorsConfigurationSource);
+	}
+
 
 }
